# sweetrpg-api-common

./: .buildinfo  .gitignore  CHANGELOG.md  Makefile  Package.swift  README.md  SECURITY.md  api.html  genindex.html  go.mod  go.sum  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: go-ci.yml  go-update-deps.yml  python-ci.yml  python-pr.yml  python-update-reqs.yml
Sources/APICommon/: Constants.swift
Sources/APICommon/Middleware/: JSONAPIMiddleware.swift
Sources/APICommon/Models/: JSONAPIResponse.swift
_modules/: index.html
_modules/sweetrpg_api_core/: data.html
_sources/: api.rst.txt  index.rst.txt
_static/: documentation_options.js
constants/: constants.go
docs/: api.rst  conf.py
requirements/: app.in  app.txt  dev.in  dev.txt  docs.in  docs.txt  pkg.in  pkg.txt  tests.in  tests.txt  update.sh
scripts/: update-requirements.sh
server/: status.go  status_test.go
src/sweetrpg_api_common/: __init__.py
src/sweetrpg_api_core/: __init__.py  data.py  errors.py  utils.py
tests/: test_api_data.py  test_safe_encoder.py  test_this.py
tracing/: otel.go  setup.go
util/: convert.go  options.go  options_test.go
vo/: responses.go
